css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
}
body {
  padding-top: 9.85rem;
}
@media (max-width: 800px) {
  body {
    padding-top: 6rem;
  }
}
@media (max-width: 500px) {
  body {
    padding-top: 6rem;
  }
}
html,
body {
  font-family: 'Roboto', sans-serif;
}
h1,
h2,
h3,
h4,
h5,
p,
a {
  color: white;
}
h1 {
  font-size: 4.8rem;
  font-family: 'Cormorant Garamond', semi-bold;
}
h2 {
  font-size: 3.6rem;
  font-family: 'Cormorant Garamond', medium italic;
}
h3 {
  font-size: 3rem;
  font-family: 'Roboto', bold;
}
h4 {
  font-family: 'Roboto', bold;
  font-size: 2.4rem;
}
h5 {
  font-family: 'Cormorant Garamond', medium italic;
}
p {
  line-height: 1.5;
  font-size: 1.6rem;
}
a {
  text-decoration: none;
  font-size: 2rem;
}
img {
  max-width: 100%;
  height: auto;
}
.site-wrapper {
  max-width: 1000px;
  width: 100%;
  margin: 0  auto;
  height: 80%;
}
@media (max-width: 500px) {
  .site-wrapper {
    height: 50%;
  }
}
.backgroundLanding {
  background: black;
  z-index: -189;
  width: auto;
  height: 90vh;
  background: rgba(235, 231, 231, 0.625);
}
@media (max-width: 500px) {
  .backgroundLanding {
    background-image: url("/imgs/book.jpg");
  }
}
.about-wrapper {
  max-width: 1000px;
  width: 100%;
  margin: 0  auto;
  height: 100%;
}
.about-body {
  padding-bottom: 10rem;
}
@media (max-width: 500px) {
  .about-body {
    padding-bottom: 12rem;
  }
}
header {
  position: fixed;
  top: 0;
  background: rgba(13, 88, 21, 0.92);
  width: 100%;
  padding: 2rem;
}
@media (max-width: 800px) {
  header {
    padding: 0.7rem;
  }
}
@media (max-width: 500px) {
  header {
    padding: 0.2rem;
  }
}
header .navbar {
  margin: 0 auto;
  width: 1000px;
  display: flex;
}
@media (max-width: 800px) {
  header .navbar {
    width: 800px;
  }
}
@media (max-width: 500px) {
  header .navbar {
    width: 500px;
  }
}
header .navbar .logo {
  width: 70%;
}
@media (max-width: 1000px) {
  header .navbar .logo {
    width: 65%;
  }
}
@media (max-width: 900px) {
  header .navbar .logo {
    width: 55%;
  }
}
@media (max-width: 800px) {
  header .navbar .logo {
    width: 75%;
  }
}
@media (max-width: 500px) {
  header .navbar .logo {
    width: 68%;
  }
}
header .navbar nav {
  width: 30%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
@media (max-width: 800px) {
  header .navbar nav {
    width: 20%;
  }
}
@media (max-width: 500px) {
  header .navbar nav {
    width: 30%;
  }
  header .navbar nav a {
    font-size: 3rem;
  }
}
header .navbar nav a {
  font-size: 1.8rem;
}
header .navbar nav a:hover {
  color: #332706;
}
header .navbar nav #signIn {
  color: #BF9018;
}
header .navbar nav #signIn:hover {
  color: #332706;
}
footer {
  position: fixed;
  bottom: 0;
  background: rgba(13, 88, 21, 0.92);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.25rem;
  width: 100%;
}
footer nav .fa {
  font-size: 2.5rem;
  padding: 1rem;
  width: 5.5rem;
  text-align: center;
  text-decoration: none;
  margin: 0.5rem 2rem;
  border-radius: 50%;
}
@media (max-width: 500px) {
  footer nav .fa {
    width: 7rem;
    font-size: 3rem;
    padding: 2rem;
  }
}
footer nav .fa:hover {
  opacity: 0.7;
}
footer nav .fa-facebook {
  background: #3B5998;
  color: white;
}
footer nav .fa-youtube {
  background: #bb0000;
  color: white;
}
footer nav .fa-instagram {
  background: #125688;
  color: white;
}
footer nav .fa-twitter {
  background: #55ACEE;
  color: white;
}
footer p {
  padding: 0.5rem;
  font-size: 1rem;
}
.site-wrapper .CTA {
  height: auto;
  width: 100%;
  height: 65%;
  z-index: -100;
}
@media (max-width: 500px) {
  .site-wrapper .CTA {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}
.site-wrapper .CTA .cta-txt {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
@media (max-width: 800px) {
  .site-wrapper .CTA .cta-txt {
    text-align: center;
    margin-bottom: 10rem;
  }
}
@media (max-width: 500px) {
  .site-wrapper .CTA .cta-txt {
    margin: 0;
    width: 100%;
  }
}
.site-wrapper .CTA .cta-txt h1 {
  color: #BF9018;
  font-size: 15rem;
  padding-top: 2rem;
  padding-bottom: 5rem;
}
@media (max-width: 500px) {
  .site-wrapper .CTA .cta-txt h1 {
    padding-bottom: 3rem;
    font-size: 13rem;
    text-align: center;
  }
}
.site-wrapper .CTA .cta-txt h3 {
  color: #332706;
  font-size: 5.5rem;
  padding-left: 4rem;
}
@media (max-width: 500px) {
  .site-wrapper .CTA .cta-txt h3 {
    padding-top: 2rem;
    font-size: 4rem;
    text-align: center;
  }
}
.site-wrapper .CTA .btn {
  padding-left: 20rem;
}
@media (max-width: 800px) {
  .site-wrapper .CTA .btn {
    padding-left: 0;
    display: flex;
    justify-content: center;
  }
}
@media (max-width: 500px) {
  .site-wrapper .CTA .btn {
    padding-left: 0;
    margin-top: 10rem;
    width: 60%;
  }
}
.site-wrapper .CTA .btn .signUp {
  align-items: baseline;
  width: 40%;
  background-color: #BF9018;
  border: 1px solid #BF9018;
  color: white;
  text-align: center;
  font-weight: bold;
  font-size: 2rem;
  border-radius: 1.5rem;
  cursor: pointer;
  padding: 1.5rem;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease 0s;
}
.site-wrapper .CTA .btn .signUp:active {
  background-color: #e9bf54;
  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
  color: #fff;
}
.site-wrapper .CTA .btn .signUp:hover {
  box-shadow: 0px 15px 22px #00000048;
}
@media (max-width: 500px) {
  .site-wrapper .CTA .btn .signUp {
    margin: 0;
    width: 100%;
  }
}
.site-wrapper .CTA .btn .signUp a {
  font-size: 3.7rem;
}
.site-wrapper .videoWrapper {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 100%;
  height: 100%;
  z-index: -200;
  -webkit-transform: translateX(-65%) translateY(-100%);
  transform: translateX(-65%) translateY(-100%);
}
@media (max-width: 1000px) {
  .site-wrapper .videoWrapper {
    width: 240%;
  }
}
@media (max-width: 800px) {
  .site-wrapper .videoWrapper {
    width: 200%;
    -webkit-transform: translateX(-80%) translateY(-50%);
    transform: translateX(-80%) translateY(-50%);
  }
}
@media (max-width: 500px) {
  .site-wrapper .videoWrapper {
    display: none;
  }
}
.site-wrapper .videoWrapper #bgVideo {
  width: 155vh;
  height: 150%;
  width: auto;
  margin: 0;
}
.about-wrapper .top-content {
  margin-bottom: 10.5rem;
}
.about-wrapper .top-content .toptxt {
  padding: 2.5rem;
}
.about-wrapper .top-content .toptxt h1 {
  color: #BF9018;
  padding-bottom: 2rem;
}
.about-wrapper .top-content .toptxt p {
  color: #332706;
}
.about-wrapper .top-content .signupbtn {
  padding-left: 5rem;
}
.about-wrapper .top-content .signupbtn .aboutbtn {
  background-color: #BF9018;
  border: 1px solid #BF9018;
  color: white;
  text-align: center;
  font-weight: bold;
  font-size: 2rem;
  border-radius: 1.5rem;
  cursor: pointer;
  padding: 1.5rem;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease 0s;
  width: 20rem;
}
.about-wrapper .top-content .signupbtn .aboutbtn:active {
  background-color: #e9bf54;
  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
  color: #fff;
}
.about-wrapper .top-content .signupbtn .aboutbtn:hover {
  box-shadow: 0px 15px 22px #00000048;
}
@media (max-width: 500px) {
  .about-wrapper .top-content {
    margin-bottom: 8rem;
  }
  .about-wrapper .top-content .toptxt {
    padding: 1.5rem;
  }
  .about-wrapper .top-content .toptxt h1 {
    font-size: 6rem;
  }
  .about-wrapper .top-content .signupbtn {
    padding-top: 5rem;
    padding-left: 10rem;
  }
  .about-wrapper .top-content .signupbtn .aboutbtn {
    width: 30rem;
    height: 8rem;
  }
  .about-wrapper .top-content .signupbtn .aboutbtn a {
    font-size: 4rem;
  }
}
.about-wrapper .middle-content {
  display: flex;
  justify-content: space-around;
}
.about-wrapper .middle-content img {
  padding-bottom: 1rem;
}
.about-wrapper .middle-content h3 {
  color: #BF9018;
}
.about-wrapper .middle-content p {
  color: #332706;
  padding: 0.5rem;
}
.about-wrapper .middle-content .middle-box {
  width: 25%;
}
@media (max-width: 500px) {
  .about-wrapper .middle-content {
    flex-direction: column;
  }
  .about-wrapper .middle-content h3 {
    font-size: 4em;
    padding-bottom: 0.5rem;
  }
  .about-wrapper .middle-content .middle-box {
    width: 100%;
    margin-bottom: 2rem;
  }
}
.about-wrapper .team {
  margin: 5rem;
}
.about-wrapper .team h2 {
  color: #BF9018;
}
.about-wrapper .team p {
  color: #332706;
  padding: 0.5rem;
}
.about-wrapper .team h3 {
  color: #332706;
}
.about-wrapper .team h4 {
  padding-top: 1rem;
  color: #332706;
}
.about-wrapper .team .teamtext {
  text-align: center;
  padding: 2rem;
  border-bottom: 0.2rem #E5E4E1 dashed;
}
@media (max-width: 500px) {
  .about-wrapper .team {
    margin: 1rem;
  }
  .about-wrapper .team h2 {
    font-size: 4rem;
  }
}
.about-wrapper .team .bios {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin: 2rem;
}
.about-wrapper .team .bios .teamcards {
  display: flex;
  flex-direction: column;
  background: #1699237b;
  box-shadow: 20px 15px 22px #00000048;
  width: 40%;
  height: 55rem;
  margin: 2rem;
  padding: 1rem;
  align-items: center;
}
.about-wrapper .team .bios .teamcards p {
  padding-bottom: 2rem;
}
.about-wrapper .team .bios .teamcards .gitbtn {
  background-color: #BF9018;
  border: 1px solid #BF9018;
  color: white;
  text-align: center;
  font-weight: bold;
  font-size: 2rem;
  border-radius: 1.5rem;
  cursor: pointer;
  padding: 1.5rem;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease 0s;
  width: 15rem;
}
.about-wrapper .team .bios .teamcards .gitbtn:active {
  background-color: #e9bf54;
  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
  color: #fff;
}
.about-wrapper .team .bios .teamcards .gitbtn:hover {
  box-shadow: 0px 15px 22px #00000048;
}
@media (max-width: 800px) {
  .about-wrapper .team .bios .teamcards {
    height: 48rem;
    width: 45%;
    margin: 1rem;
  }
}
@media (max-width: 500px) {
  .about-wrapper .team .bios .teamcards {
    width: 100%;
    height: auto;
    margin: 1.5rem;
  }
}

